[gd_scene load_steps=2 format=2]

[ext_resource path="res://game_objects/game_over_prompt.gd" type="Script" id=1]

[node name="GameOverPrompt" type="CenterContainer"]
margin_right = 1020.0
margin_bottom = 597.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 464.0
margin_top = 257.0
margin_right = 555.0
margin_bottom = 339.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 84.0
margin_bottom = 75.0
custom_constants/separation = 10

[node name="GameOverLbl" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 77.0
margin_bottom = 14.0
text = "Game over"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 77.0
margin_bottom = 38.0

[node name="FinalScoreLbl" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 73.0
margin_bottom = 14.0
text = "Final Score:"
align = 1
valign = 1

[node name="FinalScoreValLbl" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 77.0
margin_right = 77.0
margin_bottom = 14.0
align = 1
valign = 1

[node name="PlayAgainButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 48.0
margin_right = 77.0
margin_bottom = 68.0
text = "Play Again"

[connection signal="button_up" from="PanelContainer/VBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_button_up"]
